[package]
name = "rs-libc"
version.workspace = true
edition.workspace = true
publish = true
[dependencies]

panic-handler = {path = "panic-handler"}

[workspace]
members = ["crt0", "panic-handler", "utils"]

[build-dependencies]
cc = "1.2.46"
[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false
[features]
abort_on_panic = ["panic-handler/abort"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
